--- a/qml.qrc
+++ b/qml.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>qtquickcontrols2.conf</file>
         <file>main.qml</file>
+        <file>ContentView.qml</file>
+        <file>IncomeView.qml</file>
     </qresource>
 </RCC>
